# V51GammaAlphaSc47

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.txt
include/: ActionInitialization.hh  DetectorConstruction.hh  PrimaryGeneratorAction.hh  RunAction.hh  TrackingAction.hh
macros/: init_vis.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  PrimaryGeneratorAction.cc  RunAction.cc  TrackingAction.cc  main.cc
